trunk/Archive2/a7/3c47006baff9f3/output
main.cpp: In function ‘int main()’:
main.cpp:11:21: error: expected ‘)’ before numeric constant
     std::advance(vi 2);
                     ^
main.cpp:11:22: error: no matching function for call to ‘advance(__gnu_cxx::__normal_iterator<int*, std::vector<int> >&)’
     std::advance(vi 2);
                      ^
main.cpp:11:22: note: candidate is:
In file included from /usr/include/c++/4.8/bits/stl_algobase.h:66:0,
                 from /usr/include/c++/4.8/bits/char_traits.h:39,
                 from /usr/include/c++/4.8/ios:40,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_iterator_base_funcs.h:173:5: note: template<class _InputIterator, class _Distance> void std::advance(_InputIterator&, _Distance)
     advance(_InputIterator& __i, _Distance __n)
     ^
/usr/include/c++/4.8/bits/stl_iterator_base_funcs.h:173:5: note:   template argument deduction/substitution failed:
main.cpp:11:22: note:   candidate expects 2 arguments, 1 provided
     std::advance(vi 2);
                      ^
